--- a/Knapsack/Knapsack/Knapsack.vcxproj.filters
+++ b/Knapsack/Knapsack/Knapsack.vcxproj.filters
@@ -31,7 +31,13 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="input.txt">
+    <Text Include="input6.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="input7.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="input8.txt">
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
